# csv2qif

./: .gitignore  Cargo.toml  README.md  todo.txt
src/: csv_key.rs  csv_reader.rs  csv_reading.rs  fidelity_reader.rs  file_names.rs  file_read.rs  file_to_memory.rs  find_matching_line.rs  libmain.rs  main.rs  opt.rs  readers.rs  schwab_reader.rs  schwab_reader.rs.sav  schwab_transaction.rs  security.rs  sofi_reader.rs  symbols.rs  transaction.rs  transactions_qif.rs
test_data/: securities.txt
