[package]
name = "csv2qif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
chrono = "0.4.19"
csv = "1.1.6"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
stable-eyre = "0.2.2"
structopt = "0.3.25"
