[package]
name = "csv2qif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
csv = "1.1.6"
regex = "1.6.0"
serde = { version = "1.0.147", features = ["derive"] }
stable-eyre = "0.2.2"
structopt = "0.3.26"
tempfile = "3.5.0"
